Alignment fixes

--- a/indico/htdocs/sass/base/_layout.scss
+++ b/indico/htdocs/sass/base/_layout.scss
@@ -128,7 +128,7 @@ body > * {
 
         .group:first-child {
             margin-top: 3px;
-            margin-bottom: 20px;
+            margin-bottom: 23px;
 
             a {
                 width: 100%;
